# python-sls

./: .cz.toml  .env  .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  package-lock.json  package.json  pyproject.toml  serverless.yml
config/: __init__.py  cors.yml  domain.yml  environment.yml  iam.yml  vpc.yml
lambda_funcs/http/: api.py  lambda-config.yml  main.py
src/pkg/env/: __init__.py  bootstrap.py  defaults.py  env.py  env_file.py
src/pkg/logger/: __init__.py  bootstrap.py  colored_formatter.py  formatter.py  json_formatter.py  levels.py  logger.py  utils.py
