[tool.poetry]
name = "python-sls"
version = "0.0.0"
description = ""
authors = ["Eduardo Aguilar <dante.aguilar41@gmail.com>"]
readme = "README.md"
packages = [{include = "python-sls"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.98.0"
pydantic = "^1.10.9"
mangum = "^0.17.0"
python-dotenv = "^1.0.0"
sentry-sdk = "^1.26.0"
boto3 = "^1.26.160"
uvicorn = "^0.22.0"
colored = "^2.1.1"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
black = "^23.3.0"
radon = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
